fix: overflow-y

--- a/src/App.css
+++ b/src/App.css
@@ -33,4 +33,5 @@
 }
 #main {
   padding: 10px;
+  overflow: hidden;
 }
